tests/files/parser_tests/should_fail/072.cmdr
//Should not parse if-chain
if (true) {
    echo hi;
} else ((true, false)[1]) {
    echo there;
} else if (false) {
    echo bye;
} else {
    echo adios;
}
